--- a/templates/add_a_new_post.html
+++ b/templates/add_a_new_post.html
@@ -2,11 +2,11 @@
 
 {% block content %}
     <h1>This Blog</h1>
-    <form method='post'>
+    <form action='/' method='post'>
         <label>
             New Blog Entry:
-            <input type="text" title='title' />
-            <input type="text" entry='entry' />
+            <input type="text" name='title' />
+            <input type="text" name='entry' />
         </label>
         <input type="submit" value='Add Blog Entry' />
     </form>
@@ -32,13 +32,4 @@
 
     <hr />
 
-    <
-    <h2>Completed</h2>
-
-    <ul>
-        {% for task in completed_tasks %}
-        <li>{{task.name}}</li>
-        {% endfor %}
-    </ul>
-    >
 {% endblock %}
