--- a/templates/add_a_new_post.html
+++ b/templates/add_a_new_post.html
@@ -21,7 +21,7 @@
             {% for blog in blogs %}
             <li>{{blog.title}}{{blog.entry}}
                 <form method="POST" style="display:inline-block;">
-                    <input type="hidden" action="#/delete-task" name="blog-id" value="{{blog.id}}" />
+                    <input type="hidden" action="#/add_a_new_post" name="blog-id" value="{{blog.id}}" />
                     <input type="submit" value="Save" />
                 </form>
             </li>
