--- a/templates/all_blogs.html
+++ b/templates/all_blogs.html
@@ -6,9 +6,9 @@
         {% for blog in blogs %}
             <li>
                 <h2>
-                    <a href="/blog?id={{ entry.id }}">{{ entry.title }}</a>
+                    <a href="/blog?id={{ blog.id }}">{{ blog.title }}</a>
                 </h2>
-                <p>{{ entry.body }}</p>
+                <p>{{ blog.body }}</p>
             </li>
         {% endfor %}
     </ul>
