--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,22 @@
 
     <header>
       <nav>
-        <a href="/">Main Blog Page</a>
-        <a href="/add_a_new_post">Add a new blog post</a>          
+        <a href="/">Main Blog Page </a>
+        <a href="/add_a_new_post"> Add a new blog post </a>
+        <a href="/updatedb"> Delete all blogs </a>
       </nav>
     </header>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
     {% block content %}
 
     {% endblock %}
