--- a/templates/all_blogs.html
+++ b/templates/all_blogs.html
@@ -8,7 +8,7 @@
                 <h2>
                     <a href="/blog?id={{ blog.id }}">{{ blog.title }}</a>
                 </h2>
-                <p>{{ blog.body }}</p>
+                <p>{{ blog.entry }}</p>
             </li>
         {% endfor %}
     </ul>
