separated links in lame way

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 
     <header>
       <nav>
-        <a href="/">Main Blog Page </a>
-        <a href="/add_a_new_post"> Add a new blog post </a>
-        <a href="/updatedb"> Delete all blogs </a>
+        <a href="/">Main Blog Page - </a>
+        <a href="/add_a_new_post"> - Add a new blog post - </a>
+        <a href="/updatedb"> - Delete all blogs </a>
       </nav>
     </header>
 
