added signup, login, logout

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,10 @@
     <header>
       <nav>
         <a href="/">Main Blog Page - </a>
+        <a href="/login"> - Log in - <a>
         <a href="/add_a_new_post"> - Add a new blog post - </a>
-        <a href="/updatedb"> - Delete all blogs </a>
+        <a href="/updatedb"> - Initialize Database - </a>
+        <a href="/logout"> - Log out </a>
       </nav>
     </header>
 
