--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
     <header>
       <nav>
         <a href="/">Main Blog Page - </a>
-        <a href="/login"> - Log in - <a>
-        <a href="/add_a_new_post"> - Add a new blog post - </a>
+        <a href="/signup"> - Sign Up - </a>
+        <a href="/login"> - Log In - <a>
+        <a href="/add_a_new_post"> - Create new blog post - </a>
         <a href="/updatedb"> - Initialize Database - </a>
-        <a href="/logout"> - Log out </a>
+        <a href="/logout"> - Log Out </a>
       </nav>
     </header>
 
