--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
 
     <header>
       <nav>
-        <a href="/">Main Blog Page - </a>
+        <a href="/">Home - </a>
+        <a href="/blog"> - All blogs - </a>
         <a href="/signup"> - Sign Up - </a>
         <a href="/login"> - Log In - <a>
         <a href="/add_a_new_post"> - Create new blog post - </a>
