--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,9 +8,14 @@
           {{blog.title}}
         </h1>
 
+        <h6>Written by {{ blog.owner.username }}</h6>
+        
         <p>
           {{blog.entry}}
         </p>
+
+
+
 <!--
 
             <ul>
