fixed password issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,11 @@
         <a href="/">Home - </a>
         <a href="/blog"> - All blogs - </a>
         <a href="/signup"> - Sign Up - </a>
-        <a href="/login"> - Log In - <a>
-        <a href="/add_a_new_post"> - Create new blog post - </a>
+
+        <a href="/add_a_new_post"> - Create new blog post - - - - - -  </a>
+
         <a href="/updatedb"> - Initialize Database - </a>
+        <a href="/login"> - Log In - <a>
         <a href="/logout"> - Log Out </a>
       </nav>
     </header>
