--- a/templates/all_blogs.html
+++ b/templates/all_blogs.html
@@ -9,7 +9,7 @@
                     <a href="/blog?id={{ blog.id }}">{{ blog.title }}</a>
                 </h2>
                 <p>{{ blog.entry }}</p>
-                <h6>Written by {{ blog.owner.username }}</h6>
+                <h5>Written by <a href="/blog?name={{ blog.owner.username }}">{{ blog.owner.username }}</a></h5>
             </li>
         {% endfor %}
     </ul>
