--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,8 +8,8 @@
           {{blog.title}}
         </h1>
 
-        <h6>Written by {{ blog.owner.username }}</h6>
-        
+        <h5>Written by <a href="/blog?name={{ blog.owner.username }}">{{ blog.owner.username }}</a></h5>
+
         <p>
           {{blog.entry}}
         </p>
